[package]
name = "fleet-sandbox"
version = "0.1.0"
edition = "2024"
description = "Govern your own fleet — conservation law analysis for codebases"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
walkdir = "2.5"
notify = "7.0"

[profile.release]
opt-level = 3
lto = true
